populated and sorted inspections

--- a/app/src/main/res/layout/content_restaurant.xml
+++ b/app/src/main/res/layout/content_restaurant.xml
@@ -8,4 +8,12 @@
     tools:context=".ca.cmpt276A3.view.RestaurantActivity"
     tools:showIn="@layout/activity_restaurant">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/restaurant_view"
+        android:layout_width="409dp"
+        android:layout_height="673dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
