--- a/app/src/main/res/layout/activity_inspection.xml
+++ b/app/src/main/res/layout/activity_inspection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ca.cmpt276A3.view.InspectionActivity">
+    tools:context=".ca.cobalt.view.InspectionActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
