--- a/app/src/main/res/layout/content_inspection.xml
+++ b/app/src/main/res/layout/content_inspection.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ca.cmpt276A3.view.InspectionActivity"
+    tools:context=".ca.cobalt.view.InspectionActivity"
     tools:showIn="@layout/activity_inspection">
 
     <TextView
