--- a/app/src/main/res/layout/content_restaurant.xml
+++ b/app/src/main/res/layout/content_restaurant.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".view.RestaurantActivity"
     tools:showIn="@layout/activity_restaurant">
 
     <ListView
         android:id="@+id/restaurant_view"
-        android:layout_width="373dp"
-        android:layout_height="572dp"
-        android:layout_marginStart="19dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="19dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name_resActivity" />
