Menu items and back button.

--- a/app/src/main/res/layout/layout_inspection.xml
+++ b/app/src/main/res/layout/layout_inspection.xml
@@ -15,7 +15,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toStartOf="@+id/inspectionimage"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="17dp"/>
 
         <ImageView
             android:id="@+id/inspectionimage"
