--- a/app/src/main/res/layout/content_restaurant.xml
+++ b/app/src/main/res/layout/content_restaurant.xml
@@ -12,6 +12,7 @@
         android:id="@+id/restaurant_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
