--- a/app/src/main/res/layout/content_inspection.xml
+++ b/app/src/main/res/layout/content_inspection.xml
@@ -168,13 +168,15 @@
 
     <ImageView
         android:id="@+id/hazardImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="80dp"
         android:scaleX="1.5"
         android:scaleY="1.5"
+        app:layout_constraintBottom_toBottomOf="@+id/hazardRating"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/hazardRating"
-        app:layout_constraintTop_toBottomOf="@+id/numNonCritical"
+        app:layout_constraintTop_toTopOf="@+id/hazardRating"
         app:srcCompat="@android:drawable/presence_online" />
 </androidx.constraintlayout.widget.ConstraintLayout>
