--- a/app/src/main/res/layout/content_inspection.xml
+++ b/app/src/main/res/layout/content_inspection.xml
@@ -140,7 +140,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textSize="15sp"
+        android:textSize="17sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/numNonCritical"
         app:layout_constraintTop_toBottomOf="@+id/numNonCritical" />
 
@@ -168,8 +169,8 @@
 
     <ImageView
         android:id="@+id/hazardImage"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="12dp"
+        android:layout_height="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="80dp"
         android:scaleX="1.5"
