--- a/app/src/main/res/layout/violation_item.xml
+++ b/app/src/main/res/layout/violation_item.xml
@@ -3,4 +3,4 @@
     android:id="@android:id/text1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textSize="17dp"></TextView>
+    android:textSize="17sp"></TextView>
