--- a/app/src/main/res/layout/content_restaurant.xml
+++ b/app/src/main/res/layout/content_restaurant.xml
@@ -66,37 +66,15 @@
         app:layout_constraintTop_toBottomOf="@+id/name_resActivity" />
 
     <TextView
-        android:id="@+id/latitude_resActivity"
+        android:id="@+id/latLng_resActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="16dp"
         android:text="@string/latitude"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/fix_txt2"
         app:layout_constraintStart_toEndOf="@+id/fix_txt2"
         app:layout_constraintTop_toTopOf="@+id/fix_txt2" />
-
-    <TextView
-        android:id="@+id/fix_txt3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="@string/longitude_fix"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/latitude_resActivity"
-        app:layout_constraintStart_toEndOf="@+id/latitude_resActivity"
-        app:layout_constraintTop_toTopOf="@+id/latitude_resActivity" />
-
-    <TextView
-        android:id="@+id/longitude_resActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="@string/longitude_resActivity"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/fix_txt3"
-        app:layout_constraintStart_toEndOf="@+id/fix_txt3"
-        app:layout_constraintTop_toTopOf="@+id/fix_txt3" />
 
     <TextView
         android:id="@+id/restaurant_fix_text"
@@ -108,4 +86,17 @@
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="@+id/fix_txt2"
         app:layout_constraintTop_toBottomOf="@+id/fix_txt2" />
+
+    <ImageView
+        android:id="@+id/map_restaurant"
+        android:layout_width="71dp"
+        android:layout_height="54dp"
+        android:layout_marginEnd="32dp"
+        android:contentDescription="@string/map_icon_description"
+        app:layout_constraintBottom_toTopOf="@+id/restaurant_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/address_resActivity"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_map_black_24dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
