1. Added coloured pegs
2. Change buttons to appear on appbar and on map as icons

- BUG: Goes to current location when follow: MainActivity->RestaurantActivity->(click coordinate)->MapsActivity

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
 
     <item
 
-        android:id="@+id/restaurant_map_icon"
+        android:id="@+id/main_map_icon"
         android:enabled="true"
         android:icon="@drawable/map_icon"
         android:title="Map"
