--- a/app/src/main/res/layout/restaurant_item.xml
+++ b/app/src/main/res/layout/restaurant_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="60dp">
 
     <TextView
         android:id="@+id/item_numNonCritical"
@@ -22,6 +22,17 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
+        app:srcCompat="@drawable/ic_location" />
+
+    <ImageView
+        android:id="@+id/item_favourite"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="30dp"
+        android:layout_toEndOf="@id/item_restaurantLogo"
         app:srcCompat="@android:drawable/star_big_off" />
 
     <TextView
@@ -29,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="0dp"
         android:layout_toEndOf="@+id/item_restaurantLogo"
         android:textSize="18sp"
@@ -42,7 +53,7 @@
         android:layout_alignBottom="@+id/item_restaurantLogo"
         android:layout_marginStart="0dp"
         android:layout_marginBottom="0dp"
-        android:layout_toEndOf="@+id/item_restaurantLogo"
+        android:layout_toEndOf="@id/item_favourite"
         android:text="@string/num_critical" />
 
     <TextView
@@ -52,7 +63,7 @@
         android:layout_above="@+id/textView9"
         android:layout_marginStart="0dp"
         android:layout_marginBottom="0dp"
-        android:layout_toEndOf="@+id/item_restaurantLogo"
+        android:layout_toEndOf="@id/item_favourite"
         android:text="@string/num_non_critical" />
 
     <ImageView
