--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -46,17 +46,6 @@
         android:scaleType="centerCrop"
         android:src="@drawable/ic_location" />
 
-    <ImageView
-        android:id="@+id/ic_favourites"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/ic_location"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_favourites_icon" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/search_bar"
         android:layout_width="339dp"
@@ -134,7 +123,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/search_bar"
         android:layout_marginTop="10dp"
-        android:text="@string/show_violations"
+        android:text="Show Critical Violations"
         android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
